# trading_ai

./: .check_imports.py  .env.backup  .env.banknifty  .env.btc  .env.example  .env.nifty  .env.optimized  .gitignore  .mode_config.json  ANALYSIS_COMPLETE.md  API_ENDPOINTS_SUMMARY.md  API_INDEX.md  API_MANAGEMENT_README.md  API_SERVICES_SETUP.md  API_TEST_RESULTS.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  CHANGELOG.md  CREDENTIALS_TROUBLESHOOTING.md  DASHBOARD_ROUTES.md  DATA_CAPTURE_SUMMARY.md  DECOUPLING_FIX_SUMMARY.md  DEPLOYMENT.md  DOCKER_COMPOSE_ANALYSIS.md  DOCS_INDEX.md  Dockerfile  E2E_SYSTEM_RUNNING.md  FEATURES.md  FINAL_VERIFICATION_STATUS.md  FIXES_IMPLEMENTED.md  FREE_LLM_GUIDE.md  FULL_SYSTEM_OPERATIONAL.md  FULL_SYSTEM_STATUS_REPORT.md  HISTORICAL_MODE_USAGE.md  HISTORICAL_VERIFICATION_RESULTS.md  HISTORICAL_VERIFICATION_SUMMARY.md  INSTRUMENT_SWITCHING.md  KITE_AUTH_SYSTEM_SUMMARY.md  LLM_PROVIDER_GUIDE.md  LOCAL_LLM_STATUS.md  (+130 more)
genai_module/: .env.example  README.md  pyproject.toml
genai_module/src/genai_module/: __init__.py  api.py  api_endpoints.py  contracts.py
genai_module/src/genai_module/adapters/: prompt_store.py  provider_manager.py
genai_module/src/genai_module/core/: llm_provider_manager.py
genai_module/src/genai_module/tools/: update_env.py  update_env_groq.py
genai_module/tests/: test_api_endpoints.py  test_genai_contracts.py  test_health_fragment.py  test_prompt_store.py  test_provider_adapter.py  test_update_env.py
news_module/: .env.example  API_CONTRACT.md  README.md  pyproject.toml  start_news_api.py
news_module/scripts/: collect_store.py  inspect_collectors.py  inspect_db.py  trigger_and_inspect.py
news_module/src/news_module/: __init__.py  api.py  api_service.py
news_module/tests/: test_integration_api.py  test_news_module.py  test_rss_collector.py
user_module/: README.md  pyproject.toml
user_module/src/user_module/: __init__.py  api.py  api_service.py  contracts.py  services.py  stores.py
user_module/tests/: test_user_module.py
(+665 files in other folders)
